shesmu-server/src/test/resources/bad/bad-lookup-type.shesmu
Input gsi_std;

Define standard_fastq(string s)
  Where path == foo(s);
